Починены пути к изображениям

--- a/about-us.html
+++ b/about-us.html
@@ -48,16 +48,16 @@
     <main class="about-page">
         <div class="about-top">
             <div class="about-top__container">
-                <img src="/images/about-logo.png" alt="" class="about-top__logo">
+                <img src="./images/about-logo.png" alt="" class="about-top__logo">
                 <p class="about__text">Бренд maMiLlow's был создан семьей увлеченных бизнесменов с начальной идеей придумать здоровый и качественный продукт для своего ребенка-подростка, создать продукт-сладость, который не вызывал бы аллергической реакции на кожу и не давал скачков сахара на нежной гормональный фон тинейджера.</p>
             </div>
             <div class="swiper about-top__slider">
                 <div class="swiper-wrapper about-top__wrapper">
                     <div class="swiper-slide about-top__slide">
-                        <img src="/images/about-top-slide.png" alt="" class="about-top__slide-image">
+                        <img src="./images/about-top-slide.png" alt="" class="about-top__slide-image">
                     </div>
                     <div class="swiper-slide about-top__slide">
-                        <img src="/images/about-top-slide.png" alt="" class="about-top__slide-image">
+                        <img src="./images/about-top-slide.png" alt="" class="about-top__slide-image">
                     </div>
                 </div>
             </div>
@@ -87,11 +87,11 @@
                     <p class="about__subtitle">Идея создания продукта</p>
                     <p class="about__text">Идея создать совсем легкие маршмеллоу без сахара, которые бы отвечали самым строгим медицинским требованиям диетического питания, но при этом сохраняли бы насыщенный вкус и все эргономические свойства хороших маршмеллоу.</p>
                 </div>
-                <img src="/images/about-philosophy-image.png" alt="" class="about-philosophy__image">
+                <img src="./images/about-philosophy-image.png" alt="" class="about-philosophy__image">
             </div>
         </section>
         <section class="about-production" id="production" aria-labelledby="#production-heading">
-            <img src="/images/about-production-image.png" alt="" class="about-production__image">
+            <img src="./images/about-production-image.png" alt="" class="about-production__image">
             <div class="about-production__container">
                 <h2 class="about__title" id="production-heading">Производство</h2>
                 <p class="about__subtitle">Выход на рынок</p>
@@ -118,10 +118,10 @@
                     байерам и покупателям дизайн классической линейкой для тех, кто любит сахар в сладком.
                 </p>
             </div>
-            <img src="/images/about-recipe-document.png" alt="" class="about-recipe__image">
+            <img src="./images/about-recipe-document.png" alt="" class="about-recipe__image">
         </section>
         <section class="about-legend" id="legend" aria-labelledby="#legend-heading">
-            <img src="/images/about-legend-image.png" alt="" class="about-legend__image">
+            <img src="./images/about-legend-image.png" alt="" class="about-legend__image">
             <div class="about-legend__container">
                 <h2 class="about__title" id="legend-heading">Легенда бренда</h2>
                 <p class="about__subtitle">Идея создания продукта</p>
