--- a/product.html
+++ b/product.html
@@ -63,25 +63,25 @@
             <div class="swiper product-main__thumb-slider">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide product-main__thumb">
-                        <img src="/images/product-slider.png" alt="" class="product-main__thumb-image">
+                        <img src="./images/product-slider.png" alt="" class="product-main__thumb-image">
                     </div>
                     <div class="swiper-slide product-main__thumb">
-                        <img src="/images/product-slider.png" alt="" class="product-main__thumb-image">
+                        <img src="./images/product-slider.png" alt="" class="product-main__thumb-image">
                     </div>
                     <div class="swiper-slide product-main__thumb">
-                        <img src="/images/product-slider.png" alt="" class="product-main__thumb-image">
+                        <img src="./images/product-slider.png" alt="" class="product-main__thumb-image">
                     </div>
                     <div class="swiper-slide product-main__thumb">
-                        <img src="/images/product-slider.png" alt="" class="product-main__thumb-image">
+                        <img src="./images/product-slider.png" alt="" class="product-main__thumb-image">
                     </div>
                     <div class="swiper-slide product-main__thumb">
-                        <img src="/images/product-slider.png" alt="" class="product-main__thumb-image">
+                        <img src="./images/product-slider.png" alt="" class="product-main__thumb-image">
                     </div>
                     <div class="swiper-slide product-main__thumb">
-                        <img src="/images/product-slider.png" alt="" class="product-main__thumb-image">
+                        <img src="./images/product-slider.png" alt="" class="product-main__thumb-image">
                     </div>
                     <div class="swiper-slide product-main__thumb">
-                        <img src="/images/product-slider.png" alt="" class="product-main__thumb-image">
+                        <img src="./images/product-slider.png" alt="" class="product-main__thumb-image">
                     </div>
                 </div>
             </div>
@@ -92,31 +92,31 @@
             <div class="swiper product-main__slider">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide product-main__image-slide">
-                        <img src="/images/product-slider-big.png" alt="" class="product-main__image">
+                        <img src="./images/product-slider-big.png" alt="" class="product-main__image">
                     </div>
                     <div class="swiper-slide product-main__image-slide">
-                        <img src="/images/product-slider-big.png" alt="" class="product-main__image">
+                        <img src="./images/product-slider-big.png" alt="" class="product-main__image">
                     </div>
                     <div class="swiper-slide product-main__image-slide">
-                        <img src="/images/product-slider-big.png" alt="" class="product-main__image">
+                        <img src="./images/product-slider-big.png" alt="" class="product-main__image">
                     </div>
                     <div class="swiper-slide product-main__image-slide">
-                        <img src="/images/product-slider-big.png" alt="" class="product-main__image">
+                        <img src="./images/product-slider-big.png" alt="" class="product-main__image">
                     </div>
                     <div class="swiper-slide product-main__image-slide">
-                        <img src="/images/product-slider-big.png" alt="" class="product-main__image">
+                        <img src="./images/product-slider-big.png" alt="" class="product-main__image">
                     </div>
                     <div class="swiper-slide product-main__image-slide">
-                        <img src="/images/product-slider-big.png" alt="" class="product-main__image">
+                        <img src="./images/product-slider-big.png" alt="" class="product-main__image">
                     </div>
                     <div class="swiper-slide product-main__image-slide">
-                        <img src="/images/product-slider-big.png" alt="" class="product-main__image">
+                        <img src="./images/product-slider-big.png" alt="" class="product-main__image">
                     </div>
                 </div>
             </div>
             <section class="product-info">
                 <p class="product-info__title">Vanilla+Plombir</p>
-                <img src="/images/separator-pink.png" alt="" class="product-info__separator">
+                <img src="./images/separator-pink.png" alt="" class="product-info__separator">
                 <h2 class="product-info__description-heading">Описание</h2>
                 <p class="product-info__description">
                     Классическая линия маршмеллоу maMiLlow’s имеет изысканный ванильный нежный вкус с легкими нотками пломбирного мороженого или вкус фруктового сочного микса.<br>
