--- a/classic.html
+++ b/classic.html
@@ -6,13 +6,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link href="https://necolas.github.io/normalize.css/latest/normalize.css" rel="stylesheet" />
     <link rel="stylesheet" href="node_modules/@glidejs/glide/dist/css/glide.core.min.css">
-    <link rel="stylesheet" href="./index.min.css">
+    <link rel="stylesheet" href="index.min.css">
     <title>Каталог</title>
 </head>
 <body>
     <header class="header">
         <a class="header__logo">
-            <img class="header__logo-img" src="./images/logo.png"/>
+            <img class="header__logo-img" src="images/logo.png">
         </a>
         <div class="header__search-container">
             <input class="header__search-input" placeholder="Поиск..." name="search" />
@@ -23,10 +23,10 @@
                     <a class="menu__link" href="">Главная</a>
                 </li>
                 <li class="menu__item">
-                    <a class="menu__link" href="">Каталог</a>
+                    <a class="menu__link" href="classic.html">Каталог</a>
                 </li>
                 <li class="menu__item">
-                    <a class="menu__link" href="">О нас</a>
+                    <a class="menu__link" href="about-us.html">О нас</a>
                 </li>
                 <li class="menu__item">
                     <a class="menu__link" href="">Идеи</a>
@@ -37,13 +37,13 @@
             </ul>
         </nav>
         <div class="header__button-container">
-            <button class="header__button"><img class="header__button-img" src="./images/cart.png" alt=""></button>
-            <button class="header__button"><img class="header__button-img" src="./images/account.png" alt=""></button>
+            <button class="header__button"><img class="header__button-img" src="images/cart.png" alt=""></button>
+            <button class="header__button"><img class="header__button-img" src="images/account.png" alt=""></button>
         </div>
     </header>
     <main class="page">
         <div class="category-block category-block--classic">
-            <img class="category-block__bg" src="./images/classic-category-bg.png" alt="">
+            <img class="category-block__bg" src="images/classic-category-bg.png" alt="">
             <p class="category-block__subtitle">Чаще всего покупают!</p>
             <p class="category-block__title">Классический</p>
             <p class="category-block__description">
@@ -69,10 +69,10 @@
                 <nav class="catalog__nav">
                     <ul class="catalog__nav-list">
                         <li class="catalog__nav-item">
-                            <a href="./sugar-free.html" class="catalog__nav-link">maMillow's SUGAR FREE</a>
+                            <a href="sugar-free.html" class="catalog__nav-link">maMillow's SUGAR FREE</a>
                         </li>
                         <li class="catalog__nav-item">
-                            <a href="./classic.html" class="catalog__nav-link catalog__nav-link--active">maMillow's CLASSIC</a>
+                            <a href="classic.html" class="catalog__nav-link catalog__nav-link--active">maMillow's CLASSIC</a>
                         </li>
                     </ul>
                 </nav>
@@ -82,7 +82,7 @@
                     <h3 class="catalog__product-title" style="color: #f39c00;">Vanilla+Plombir</h3>
                     <div class="catalog__product-container" style="background-image: url(images/vanilla-plombir-90-bg.png);">
                         <p class="catalog__product-description">Насыщенный пломбир + ваниль</p>
-                        <p class="catalog__product-weight catalog__product-weight--small">90</p>
+                        <p class="catalog__product-weight catalog__product-weight--small">90 г</p>
                         <img src="images/vanilla-plombir-90-classic.png" alt="" class="catalog__product-image">
                     </div>
                 </article>
@@ -90,7 +90,7 @@
                     <h3 class="catalog__product-title" style="color: #d84e90;">Fruitmix</h3>
                     <div class="catalog__product-container" style="background-image: url(images/fruitmix-90-bg.png);">
                         <p class="catalog__product-description">Яркий фруктовый микс</p>
-                        <p class="catalog__product-weight catalog__product-weight--small">90</p>
+                        <p class="catalog__product-weight catalog__product-weight--small">90 г</p>
                         <img src="images/fruitmix-90-classic.png" alt="" class="catalog__product-image">
                     </div>
                 </article>
@@ -98,7 +98,7 @@
                     <h3 class="catalog__product-title" style="color: #40bbcb;">Vanilla+Plombir</h3>
                     <div class="catalog__product-container" style="background-image: url(images/vanilla-plombir-120-bg.png);">
                         <p class="catalog__product-description">Насыщенный пломбир + ваниль</p>
-                        <p class="catalog__product-weight catalog__product-weight--big">120</p>
+                        <p class="catalog__product-weight catalog__product-weight--big">120 г</p>
                         <img src="images/vanilla-plombir-120-classic.png" alt="" class="catalog__product-image">
                     </div>
                 </article>
@@ -106,7 +106,7 @@
                     <h3 class="catalog__product-title" style="color: #486dce;">Fruitmix</h3>
                     <div class="catalog__product-container" style="background-image: url(images/fruitmix-120-bg.png);">
                         <p class="catalog__product-description">Яркий фруктовый микс</p>
-                        <p class="catalog__product-weight catalog__product-weight--big">120</p>
+                        <p class="catalog__product-weight catalog__product-weight--big">120 г</p>
                         <img src="images/fruitmix-120-classic.png" alt="" class="catalog__product-image">
                     </div>
                 </article>
@@ -115,24 +115,24 @@
         <div class="feedback">
             <section class="contact" aria-labelledby="#contact-heading">
                 <h2 id="contact-heading" class="contact__heading">Контакты</h2>
-                <img src="./images/contact-bg.png" alt="" class="contact__image">
+                <img src="images/contact-bg.png" alt="" class="contact__image">
                 <ul class="contact__list">
                     <li class="contact__item">
-                        <img src="./images/contact-email.png" alt="" class="contact__icon">
+                        <img src="images/contact-email.png" alt="" class="contact__icon">
                         <div class="contact__info">
                             <p class="contact__title">Email</p>
                             <a href="mailto:info@mimollows.ru" class="contact__link">info@mimillows.ru</a>
                         </div>
                     </li>
                     <li class="contact__item">
-                        <img src="./images/contact-tg.png" alt="" class="contact__icon">
+                        <img src="images/contact-tg.png" alt="" class="contact__icon">
                         <div class="contact__info">
                             <p class="contact__title">Поддержка</p>
                             <a href="t.me/mamillows" target="_blank" class="contact__link">t.me/mamillows</a>
                         </div>
                     </li>
                     <li class="contact__item">
-                        <img src="./images/contact-vk.png" alt="" class="contact__icon">
+                        <img src="images/contact-vk.png" alt="" class="contact__icon">
                         <div class="contact__info">
                             <p class="contact__title">ВКонтакте</p>
                             <a href="vk.com/mamillows" target="_blank" class="contact__link">vk.com/mamillows</a>
