--- a/about-us.html
+++ b/about-us.html
@@ -10,13 +10,13 @@
         rel="stylesheet"
         href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
     />
-    <link rel="stylesheet" href="./index.min.css">
+    <link rel="stylesheet" href="index.min.css">
     <title>Каталог</title>
 </head>
 <body>
     <header class="header">
         <a class="header__logo">
-            <img class="header__logo-img" src="./images/logo.png"/>
+            <img class="header__logo-img" src="images/logo.png">
         </a>
         <div class="header__search-container">
             <input class="header__search-input" placeholder="Поиск..." name="search" />
@@ -27,10 +27,10 @@
                     <a class="menu__link" href="">Главная</a>
                 </li>
                 <li class="menu__item">
-                    <a class="menu__link" href="">Каталог</a>
+                    <a class="menu__link" href="classic.html">Каталог</a>
                 </li>
                 <li class="menu__item">
-                    <a class="menu__link" href="">О нас</a>
+                    <a class="menu__link" href="about-us.html">О нас</a>
                 </li>
                 <li class="menu__item">
                     <a class="menu__link" href="">Идеи</a>
@@ -41,23 +41,23 @@
             </ul>
         </nav>
         <div class="header__button-container">
-            <button class="header__button"><img class="header__button-img" src="./images/cart.png" alt=""></button>
-            <button class="header__button"><img class="header__button-img" src="./images/account.png" alt=""></button>
+            <button class="header__button"><img class="header__button-img" src="images/cart.png" alt=""></button>
+            <button class="header__button"><img class="header__button-img" src="images/account.png" alt=""></button>
         </div>
     </header>
     <main class="about-page">
         <div class="about-top">
             <div class="about-top__container">
-                <img src="./images/about-logo.png" alt="" class="about-top__logo">
+                <img src="images/about-logo.png" alt="" class="about-top__logo">
                 <p class="about__text">Бренд maMiLlow's был создан семьей увлеченных бизнесменов с начальной идеей придумать здоровый и качественный продукт для своего ребенка-подростка, создать продукт-сладость, который не вызывал бы аллергической реакции на кожу и не давал скачков сахара на нежной гормональный фон тинейджера.</p>
             </div>
             <div class="swiper about-top__slider">
                 <div class="swiper-wrapper about-top__wrapper">
                     <div class="swiper-slide about-top__slide">
-                        <img src="./images/about-top-slide.png" alt="" class="about-top__slide-image">
+                        <img src="images/about-top-slide.png" alt="" class="about-top__slide-image">
                     </div>
                     <div class="swiper-slide about-top__slide">
-                        <img src="./images/about-top-slide.png" alt="" class="about-top__slide-image">
+                        <img src="images/about-top-slide.png" alt="" class="about-top__slide-image">
                     </div>
                 </div>
             </div>
@@ -87,11 +87,11 @@
                     <p class="about__subtitle">Идея создания продукта</p>
                     <p class="about__text">Идея создать совсем легкие маршмеллоу без сахара, которые бы отвечали самым строгим медицинским требованиям диетического питания, но при этом сохраняли бы насыщенный вкус и все эргономические свойства хороших маршмеллоу.</p>
                 </div>
-                <img src="./images/about-philosophy-image.png" alt="" class="about-philosophy__image">
+                <img src="images/about-philosophy-image.png" alt="" class="about-philosophy__image">
             </div>
         </section>
         <section class="about-production" id="production" aria-labelledby="#production-heading">
-            <img src="./images/about-production-image.png" alt="" class="about-production__image">
+            <img src="images/about-production-image.png" alt="" class="about-production__image">
             <div class="about-production__container">
                 <h2 class="about__title" id="production-heading">Производство</h2>
                 <p class="about__subtitle">Выход на рынок</p>
@@ -118,10 +118,10 @@
                     байерам и покупателям дизайн классической линейкой для тех, кто любит сахар в сладком.
                 </p>
             </div>
-            <img src="./images/about-recipe-document.png" alt="" class="about-recipe__image">
+            <img src="images/about-recipe-document.png" alt="" class="about-recipe__image">
         </section>
         <section class="about-legend" id="legend" aria-labelledby="#legend-heading">
-            <img src="./images/about-legend-image.png" alt="" class="about-legend__image">
+            <img src="images/about-legend-image.png" alt="" class="about-legend__image">
             <div class="about-legend__container">
                 <h2 class="about__title" id="legend-heading">Легенда бренда</h2>
                 <p class="about__subtitle">Идея создания продукта</p>
@@ -132,24 +132,24 @@
     <div class="feedback">
         <section class="contact" aria-labelledby="#contact-heading">
             <h2 id="contact-heading" class="about__title">Контакты</h2>
-            <img src="./images/contact-bg.png" alt="" class="contact__image">
+            <img src="images/contact-bg.png" alt="" class="contact__image">
             <ul class="contact__list">
                 <li class="contact__item">
-                    <img src="./images/contact-email.png" alt="" class="contact__icon">
+                    <img src="images/contact-email.png" alt="" class="contact__icon">
                     <div class="contact__info">
                         <p class="contact__title">Email</p>
                         <a href="mailto:info@mimollows.ru" class="contact__link">info@mimillows.ru</a>
                     </div>
                 </li>
                 <li class="contact__item">
-                    <img src="./images/contact-tg.png" alt="" class="contact__icon">
+                    <img src="images/contact-tg.png" alt="" class="contact__icon">
                     <div class="contact__info">
                         <p class="contact__title">Поддержка</p>
                         <a href="t.me/mamillows" target="_blank" class="contact__link">t.me/mamillows</a>
                     </div>
                 </li>
                 <li class="contact__item">
-                    <img src="./images/contact-vk.png" alt="" class="contact__icon">
+                    <img src="images/contact-vk.png" alt="" class="contact__icon">
                     <div class="contact__info">
                         <p class="contact__title">ВКонтакте</p>
                         <a href="vk.com/mamillows" target="_blank" class="contact__link">vk.com/mamillows</a>
@@ -199,5 +199,5 @@
     </footer>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-<script src="./index.min.js"></script>
+<script src="index.min.js"></script>
 </html>
