--- a/product.html
+++ b/product.html
@@ -9,13 +9,13 @@
         rel="stylesheet"
         href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
     />
-    <link rel="stylesheet" href="./index.min.css">
+    <link rel="stylesheet" href="index.min.css">
     <title>Каталог</title>
 </head>
 <body>
     <header class="header">
         <a class="header__logo">
-            <img class="header__logo-img" src="./images/logo.png"/>
+            <img class="header__logo-img" src="images/logo.png">
         </a>
         <div class="header__search-container">
             <input class="header__search-input" placeholder="Поиск..." name="search" />
@@ -26,10 +26,10 @@
                     <a class="menu__link" href="">Главная</a>
                 </li>
                 <li class="menu__item">
-                    <a class="menu__link" href="">Каталог</a>
+                    <a class="menu__link" href="classic.html">Каталог</a>
                 </li>
                 <li class="menu__item">
-                    <a class="menu__link" href="">О нас</a>
+                    <a class="menu__link" href="about-us.html">О нас</a>
                 </li>
                 <li class="menu__item">
                     <a class="menu__link" href="">Идеи</a>
@@ -40,8 +40,8 @@
             </ul>
         </nav>
         <div class="header__button-container">
-            <button class="header__button"><img class="header__button-img" src="./images/cart.png" alt=""></button>
-            <button class="header__button"><img class="header__button-img" src="./images/account.png" alt=""></button>
+            <button class="header__button"><img class="header__button-img" src="images/cart.png" alt=""></button>
+            <button class="header__button"><img class="header__button-img" src="images/account.png" alt=""></button>
         </div>
     </header>
     <nav class="breadcrumbs">
@@ -63,25 +63,25 @@
             <div class="swiper product-main__thumb-slider">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide product-main__thumb">
-                        <img src="./images/product-slider.png" alt="" class="product-main__thumb-image">
+                        <img src="images/product-slider.png" alt="" class="product-main__thumb-image">
                     </div>
                     <div class="swiper-slide product-main__thumb">
-                        <img src="./images/product-slider.png" alt="" class="product-main__thumb-image">
+                        <img src="images/product-slider.png" alt="" class="product-main__thumb-image">
                     </div>
                     <div class="swiper-slide product-main__thumb">
-                        <img src="./images/product-slider.png" alt="" class="product-main__thumb-image">
+                        <img src="images/product-slider.png" alt="" class="product-main__thumb-image">
                     </div>
                     <div class="swiper-slide product-main__thumb">
-                        <img src="./images/product-slider.png" alt="" class="product-main__thumb-image">
+                        <img src="images/product-slider.png" alt="" class="product-main__thumb-image">
                     </div>
                     <div class="swiper-slide product-main__thumb">
-                        <img src="./images/product-slider.png" alt="" class="product-main__thumb-image">
+                        <img src="images/product-slider.png" alt="" class="product-main__thumb-image">
                     </div>
                     <div class="swiper-slide product-main__thumb">
-                        <img src="./images/product-slider.png" alt="" class="product-main__thumb-image">
+                        <img src="images/product-slider.png" alt="" class="product-main__thumb-image">
                     </div>
                     <div class="swiper-slide product-main__thumb">
-                        <img src="./images/product-slider.png" alt="" class="product-main__thumb-image">
+                        <img src="images/product-slider.png" alt="" class="product-main__thumb-image">
                     </div>
                 </div>
             </div>
@@ -92,31 +92,31 @@
             <div class="swiper product-main__slider">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide product-main__image-slide">
-                        <img src="./images/product-slider-big.png" alt="" class="product-main__image">
+                        <img src="images/product-slider-big.png" alt="" class="product-main__image">
                     </div>
                     <div class="swiper-slide product-main__image-slide">
-                        <img src="./images/product-slider-big.png" alt="" class="product-main__image">
+                        <img src="images/product-slider-big.png" alt="" class="product-main__image">
                     </div>
                     <div class="swiper-slide product-main__image-slide">
-                        <img src="./images/product-slider-big.png" alt="" class="product-main__image">
+                        <img src="images/product-slider-big.png" alt="" class="product-main__image">
                     </div>
                     <div class="swiper-slide product-main__image-slide">
-                        <img src="./images/product-slider-big.png" alt="" class="product-main__image">
+                        <img src="images/product-slider-big.png" alt="" class="product-main__image">
                     </div>
                     <div class="swiper-slide product-main__image-slide">
-                        <img src="./images/product-slider-big.png" alt="" class="product-main__image">
+                        <img src="images/product-slider-big.png" alt="" class="product-main__image">
                     </div>
                     <div class="swiper-slide product-main__image-slide">
-                        <img src="./images/product-slider-big.png" alt="" class="product-main__image">
+                        <img src="images/product-slider-big.png" alt="" class="product-main__image">
                     </div>
                     <div class="swiper-slide product-main__image-slide">
-                        <img src="./images/product-slider-big.png" alt="" class="product-main__image">
+                        <img src="images/product-slider-big.png" alt="" class="product-main__image">
                     </div>
                 </div>
             </div>
             <section class="product-info">
                 <p class="product-info__title">Vanilla+Plombir</p>
-                <img src="./images/separator-pink.png" alt="" class="product-info__separator">
+                <img src="images/separator-pink.png" alt="" class="product-info__separator">
                 <h2 class="product-info__description-heading">Описание</h2>
                 <p class="product-info__description">
                     Классическая линия маршмеллоу maMiLlow’s имеет изысканный ванильный нежный вкус с легкими нотками пломбирного мороженого или вкус фруктового сочного микса.<br>
@@ -223,5 +223,5 @@
     </footer>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-<script src="./index.min.js"></script>
+<script src="index.min.js"></script>
 </html>
