--- a/product.html
+++ b/product.html
@@ -9,7 +9,7 @@
         rel="stylesheet"
         href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
     />
-    <link rel="stylesheet" href="index.min.css">
+    <link rel="stylesheet" href="index.css">
     <title>Каталог</title>
 </head>
 <body>
@@ -223,5 +223,5 @@
     </footer>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-<script src="index.min.js"></script>
+<script type="module" src="scripts/product-page.js"></script>
 </html>
