--- a/classic.html
+++ b/classic.html
@@ -12,10 +12,10 @@
 <body>
     <header class="header">
         <button class="header__menu-button">
-            <img src="./images/menu-burger.png" alt="" class="header__menu-image">
+            <img src="/images/menu-burger.png" alt="" class="header__menu-image">
         </button>
         <a class="header__logo">
-            <img class="header__logo-img" src="./images/logo.png">
+            <img class="header__logo-img" src="/images/logo.png">
         </a>
         <div class="header__search-container">
             <input class="header__search-input" placeholder="Поиск..." name="search" />
@@ -40,8 +40,8 @@
             </ul>
         </nav>
         <div class="header__button-container">
-            <button class="header__button"><img class="header__button-img" src="./images/cart.png" alt=""></button>
-            <button class="header__button"><img class="header__button-img" src="./images/account.png" alt=""></button>
+            <button class="header__button"><img class="header__button-img" src="/images/cart.png" alt=""></button>
+            <button class="header__button"><img class="header__button-img" src="/images/account.png" alt=""></button>
         </div>
     </header>
     <main class="page">
@@ -83,7 +83,7 @@
                         <p class="catalog__product-description">Насыщенный пломбир + ваниль</p>
                         <p class="catalog__product-weight catalog__product-weight--small">90 г</p>
                         <img 
-                            srcset="./images/product/vanilla-plombir/90/classic-mobile.png 480w, images/product/vanilla-plombir/90/classic.png" 
+                            srcset="/images/product/vanilla-plombir/90/classic-mobile.png 480w, /images/product/vanilla-plombir/90/classic.png" 
                             alt="" 
                             class="catalog__product-image catalog__product-image--small"
                         >
@@ -95,7 +95,7 @@
                         <p class="catalog__product-description">Яркий фруктовый микс</p>
                         <p class="catalog__product-weight catalog__product-weight--small">90 г</p>
                         <img 
-                            srcset="./images/product/fruitmix/90/classic-mobile.png 480w, images/product/fruitmix/90/classic.png" 
+                            srcset="/images/product/fruitmix/90/classic-mobile.png 480w, /images/product/fruitmix/90/classic.png" 
                             alt="" 
                             class="catalog__product-image catalog__product-image--small"
                         >
@@ -107,7 +107,7 @@
                         <p class="catalog__product-description">Насыщенный пломбир + ваниль</p>
                         <p class="catalog__product-weight catalog__product-weight--big">120 г</p>
                         <img 
-                            srcset="./images/product/vanilla-plombir/120/classic-mobile.png 480w, images/product/vanilla-plombir/120/classic.png" 
+                            srcset="/images/product/vanilla-plombir/120/classic-mobile.png 480w, /images/product/vanilla-plombir/120/classic.png" 
                             alt="" 
                             class="catalog__product-image catalog__product-image--big"
                         >
@@ -119,7 +119,7 @@
                         <p class="catalog__product-description">Яркий фруктовый микс</p>
                         <p class="catalog__product-weight catalog__product-weight--big">120 г</p>
                         <img 
-                            srcset="./images/product/fruitmix/120/classic-mobile.png 480w, images/product/fruitmix/120/classic.png" 
+                            srcset="/images/product/fruitmix/120/classic-mobile.png 480w, /images/product/fruitmix/120/classic.png" 
                             alt="" 
                             class="catalog__product-image catalog__product-image--big"
                         >
@@ -130,24 +130,24 @@
         <div class="feedback">
             <section class="contact" aria-labelledby="#contact-heading">
                 <h2 id="contact-heading" class="contact__heading">Контакты</h2>
-                <img srcset="./images/contact-bg-mobile.png 480w, images/contact-bg.png" alt="" class="contact__image">
+                <img srcset="/images/contact-bg-mobile.png 480w, /images/contact-bg.png" alt="" class="contact__image">
                 <ul class="contact__list">
                     <li class="contact__item">
-                        <img src="./images/contact-email.png" alt="" class="contact__icon">
+                        <img src="/images/contact-email.png" alt="" class="contact__icon">
                         <div class="contact__info">
                             <p class="contact__title">Email</p>
                             <a href="mailto:info@mimollows.ru" class="contact__link">info@mimillows.ru</a>
                         </div>
                     </li>
                     <li class="contact__item">
-                        <img src="./images/contact-tg.png" alt="" class="contact__icon">
+                        <img src="/images/contact-tg.png" alt="" class="contact__icon">
                         <div class="contact__info">
                             <p class="contact__title">Поддержка</p>
                             <a href="t.me/mamillows" target="_blank" class="contact__link">t.me/mamillows</a>
                         </div>
                     </li>
                     <li class="contact__item">
-                        <img src="./images/contact-vk.png" alt="" class="contact__icon">
+                        <img src="/images/contact-vk.png" alt="" class="contact__icon">
                         <div class="contact__info">
                             <p class="contact__title">ВКонтакте</p>
                             <a href="vk.com/mamillows" target="_blank" class="contact__link">vk.com/mamillows</a>
@@ -192,7 +192,7 @@
                 <label for="subscription-checkbox" class="footer__privacy-label">Я согласен с <a href="">политикой конфиденциальности</a></label>
             </fieldset>
         </form>
-        <img srcset="./images/footer-separator-mobile.png 480w" alt="" class="footer__sepatator">
+        <img srcset="/images/footer-separator-mobile.png 480w" alt="" class="footer__sepatator">
         <p class="footer__info">
             ООО &laquo;Компания&raquo;<br>
             <br>
